# kdl-config

./: .gitignore  Cargo.toml  README.md  match_test  mise.toml
attrs/: container.rs  field.rs  field_info.rs  mod.rs  parse.rs  type_utils.rs  types.rs
crates/kdl-config/: Cargo.toml
crates/kdl-config-derive/: Cargo.toml
crates/kdl-config-derive/src/: attrs.rs  choice_gen.rs  enum_gen.rs  kdl_gen.rs  lib.rs  merge_gen.rs  parse_gen.rs  partial_gen.rs  render_gen.rs  schema_gen.rs  update_gen.rs  value_gen.rs
crates/kdl-config-derive/src/attrs/: container.rs  field.rs  field_info.rs  mod.rs  parse.rs  type_utils.rs  types.rs
crates/kdl-config-derive/tests/: schema_test.rs
crates/kdl-config-derive/tests/ui/: append_on_registry.rs  append_on_registry.stderr  append_on_scalar.rs  append_on_scalar.stderr  children_non_vec.rs  children_non_vec.stderr  default_invalid_literal.rs  default_invalid_literal.stderr  enum_variant_unknown_attr.rs  enum_variant_unknown_attr.stderr  flag_missing_neg.rs  flag_missing_neg.stderr  flag_missing_pos.rs  flag_missing_pos.stderr  flag_non_bool.rs  flag_non_bool.stderr  hoist_without_tag_attr.rs  hoist_without_tag_attr.stderr  invalid_bool_mode.rs  invalid_bool_mode.stderr  invalid_conflict.rs  invalid_conflict.stderr  invalid_default_bool.rs  invalid_default_bool.stderr  invalid_default_conflict.rs  invalid_default_conflict.stderr  invalid_default_flag_style.rs  invalid_default_flag_style.stderr  invalid_default_placement.rs  invalid_default_placement.stderr  invalid_flag_style.rs  invalid_flag_style.stderr  invalid_no_skip_serialize.rs  invalid_no_skip_serialize.stderr  invalid_rename_all.rs  invalid_rename_all.stderr  invalid_render.rs  invalid_render.stderr  invalid_schema_kind.rs  invalid_schema_kind.stderr  (+14 more)
crates/kdl-config-runtime/: Cargo.toml
crates/kdl-config-runtime/src/: config.rs  convert.rs  deep_merge.rs  error.rs  formatter.rs  helpers.rs  layer.rs  lib.rs  merge.rs  newtypes.rs  parse.rs  render.rs  round_trip.rs  schema.rs  types.rs
crates/kdl-config-runtime/tests/: conversions.rs  end_to_end.rs  golden.rs  helpers.rs  property_placements.rs  property_roundtrip.rs  round_trip_render.rs
crates/kdl-config-runtime/tests/fixtures/: kitchen-sink.golden.kdl  kitchen-sink.kdl
crates/kdl-config/src/: config.rs  context.rs  convert.rs  error.rs  formatter.rs  fragments.rs  helpers.rs  layer.rs  lib.rs  loader.rs  merge.rs  newtypes.rs  node_ext.rs  node_path.rs  parse.rs  primitive_decode.rs  render.rs  resolve.rs  round_trip.rs  schema.rs  selector.rs  templates.rs  types.rs  validation.rs
crates/kdl-config/tests/: choice_test.rs  conversions.rs  end_to_end.rs  fragments.rs  from_attr.rs  golden.rs  helpers.rs  kdl_derive_test.rs  merge_and_partial_derive.rs  merge_enum.rs  merge_props.rs  merge_skip.rs  parse_error_reporting.rs  partial_autogen.rs  partial_compile_fail.rs  partial_consumer_acceptance.rs  partial_default_strip.rs  pathbuf_test.rs  property_placements.rs  property_roundtrip.rs  render_array.rs  root_mode_and_post_decode.rs  round_trip_render.rs  schema_fragments.rs  schema_templates.rs  skip_serialize_tags.rs  tagged_child_fields.rs  templates.rs  validation.rs
crates/kdl-config/tests/ui/: partial_modifier.rs  partial_modifier.stderr  partial_registry_vec.rs  partial_registry_vec.stderr
docs/: kdl-config-spec.md  validation.md
skill/: SKILL.md
skill/agents/: openai.yaml
skill/references/: GUIDE.md  SPEC.md  STYLE.md  VALIDATION.md
