[package]
    name                 = "kdl-config-derive"
    version.workspace    = true
    edition.workspace    = true
    authors.workspace    = true
    license.workspace    = true
    repository.workspace = true
    description          = "Derive macros for kdl-config, enabling strongly-typed KDL parsing."

[lib]
    proc-macro = true

[dependencies]
    proc-macro2 = "1"
    quote       = "1"
    syn         = { version = "2", features = ["full", "extra-traits"] }

    kdl-config-runtime.workspace = true

[dev-dependencies]
    trybuild = "1"
