[package]
    name                  = "kdl-config"
    version.workspace     = true
    edition.workspace     = true
    authors.workspace     = true
    license.workspace     = true
    repository.workspace  = true
    description.workspace = true

[features]
    default = []
    serde   = ["kdl-config-runtime/serde"]

[dependencies]
    kdl-config-runtime.workspace = true
    kdl-config-derive.workspace  = true
