[package]
    name                 = "kdl-config"
    version.workspace    = true
    edition.workspace    = true
    authors.workspace    = true
    license.workspace    = true
    repository.workspace = true
    description          = "Runtime library for kdl-config, providing trait definitions and parsing logic."

[features]
    default = []
    serde   = ["dep:serde"]

[dependencies]
    kdl                         = { workspace = true, features = ["span"] }
    kdl-config-derive.workspace = true
    num-traits                  = "0.2.19"
    serde                       = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
    proptest = "1"
